force-app/main/default/objects/Lead/fields/TipoDeImovel__c.field-meta.xml
<CustomField>
    <fullName>TipoDeImovel__c</fullName>
    <label>Tipo de imóvel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>com telhado cerâmico</fullName>
            </value>
            <value>
                <fullName>com telhado fibrocimento</fullName>
            </value>
            <value>
                <fullName>com telhado metálico</fullName>
            </value>
            <value>
                <fullName>com laje</fullName>
            </value>
            <value>
                <fullName>edifício</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>