force-app/main/default/objects/Lead/fields/ValorContaEnergia__c.field-meta.xml
<CustomField>
    <fullName>ValorContaEnergia__c</fullName>
    <label>Valor da Conta de Energia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Até R$ 200</fullName>
            </value>
            <value>
                <fullName>Entre R$ 200 e R$ 499</fullName>
            </value>
            <value>
                <fullName>Acima de R$ 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>