force-app/main/default/objects/Lead/fields/ValorPlano__c.field-meta.xml
<CustomField>
    <fullName>ValorPlano__c</fullName>
    <label>Valor do Plano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>