force-app/main/default/objects/Lead/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message__c</fullName>
    <label>Mensagem de Boas-vindas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>