force-app/main/default/objects/Lead/fields/WhatsApp_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >wa_id do contato WhatsApp. Usado como atributo e fallback de identidade.</description>
    <externalId>true</externalId>
    <label>ID do WhatsApp</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>