force-app/main/default/objects/Lead/fields/WhatsApp_User_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_User_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Identificador estável do usuário WhatsApp enviado pela Meta em messages[0].from_user_id.</description>
    <externalId>true</externalId>
    <label>ID do Usuário WhatsApp</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>