force-app/main/default/objects/Lead/recordTypes/Cliente.recordType-meta.xml
<RecordType>
    <fullName>Cliente</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>Cliente</label>
</RecordType>