force-app/main/default/objects/Lead/recordTypes/QualificacaodeClientes.recordType-meta.xml
<RecordType>
    <fullName>QualificacaodeClientes</fullName>
    <active>true</active>
    <businessProcess>Qualificação de Clientes</businessProcess>
    <label>Qualificação de Clientes</label>
</RecordType>