force-app/main/default/objects/Lead/recordTypes/QualificacaodeConsultores.recordType-meta.xml
<RecordType>
    <fullName>QualificacaodeConsultores</fullName>
    <active>true</active>
    <businessProcess>Qualificação de Consultores</businessProcess>
    <label>Qualificação de Consultores</label>
</RecordType>