force-app/main/default/objects/Lead/validationRules/LeadEstadoObg.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadEstadoObg</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  ISPICKVAL(Status, &apos;Distribuído&apos;),
  OR(
    ISPICKVAL(Lb065_Estado__c, &apos;&apos;),
    ISPICKVAL(Rating, &apos;&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Não é possível alterar o status para &apos;Distribuído&apos; sem selecionar o Estado e a Classificação do Lead.</errorMessage>
</ValidationRule>