force-app/main/default/objects/Lead/validationRules/Ordem_caminho_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordem_caminho_Status</fullName>
    <active>true</active>
    <description>Verifica se a ordem do caminho esta sendo seguida</description>
    <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;Consultor&quot;),
    ISCHANGED(Status),
    OR(
        AND(
            ISPICKVAL(Status, &quot;Novo&quot;),
            NOT(ISPICKVAL(PRIORVALUE(Status), &quot;&quot;))
        ),
        AND(
            ISPICKVAL(Status, &quot;Trabalhando&quot;),
            NOT(
                OR(
                    ISPICKVAL(PRIORVALUE(Status), &quot;Novo&quot;),
                    ISPICKVAL(PRIORVALUE(Status), &quot;Distribuído&quot;),
                    ISPICKVAL(PRIORVALUE(Status), &quot;Unqualified&quot;)
                )
            )
        ),
        AND(
            ISPICKVAL(Status, &quot;Aguardando Pagamento&quot;),
            NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Trabalhando&quot;))
        ),
        AND(
            ISPICKVAL(Status, &quot;Qualified&quot;),
            NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Aguardando Pagamento&quot;))
        )
    )
)</errorConditionFormula>
    <errorMessage
  >Sequencia do caminho incorreta! Favor seguir com a próxima etapa.</errorMessage>
</ValidationRule>