force-app/main/default/objects/Lead/validationRules/PhoneObg.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneObg</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISBLANK(Phone),
				ISBLANK(MobilePhone),
				ISPICKVAL(Status, &apos;Distribuído&apos;),
				ISCHANGED(Status)
)</errorConditionFormula>
    <errorMessage>Campo Telefone precisa ser preenchido antes de mudar a fase do Lead.</errorMessage>
</ValidationRule>