force-app/main/default/objects/Lead/validationRules/ProdutoInteresseObg.validationRule-meta.xml
<ValidationRule>
  <fullName>ProdutoInteresseObg</fullName>
  <active>false</active>
  <errorConditionFormula>AND(
    ISPICKVAL(Lb065_ProdutoInteresse__c,&apos;&apos;),
    ISPICKVAL(Status, &apos;Distribuído&apos;),
    ISCHANGED(Status),
    RecordType.DeveloperName = &apos;QualificacaodeClientes&apos;
    )</errorConditionFormula>
  <errorMessage>Campo Produto de interesse precisa ser preenchido antes de mudar a fase do Lead.</errorMessage>
</ValidationRule>