force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Sub_Status__c</columns>
    <columns>ConsultorRegional__c</columns>
    <columns>CustoEnergiaMes__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lb065_ProdutoInteresse__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>Nome_da_Campanha_Meta__c</columns>
    <columns>Nome_do_Conjunto_de_An_ncios_Meta__c</columns>
    <columns>Nome_do_An_ncio_Meta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Novo</value>
    </filters>
    <label>Todos os leads Abertos</label>
</ListView>