force-app/main/default/objects/Lead/listViews/C_pia_de_Todos_os_Leads_Qualifica_o_de_Cliente.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Todos_os_Leads_Qualifica_o_de_Cliente</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.QualificacaodeClientes</value>
    </filters>
    <label>Todos os Leads Qualificação de Cliente</label>
</ListView>