force-app/main/default/objects/Lead/listViews/Leads_Qualifica_o_de_Cliente_Novo.listView-meta.xml
<ListView>
    <fullName>Leads_Qualifica_o_de_Cliente_Novo</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.QualificacaodeClientes</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Novo</value>
    </filters>
    <label>Qualificação de Cliente - Novo</label>
</ListView>