force-app/main/default/objects/Lead/listViews/Todos_Lead_com_Consultor.listView-meta.xml
<ListView>
    <fullName>Todos_Lead_com_Consultor</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Sub_Status__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ConsultorRegional__c</columns>
    <columns>EstadosAtendidos__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ConsultorRegional__c</field>
        <operation>notEqual</operation>
        <value />
    </filters>
    <label>Todos Lead com Consultor</label>
</ListView>