force-app/main/default/objects/Lead/listViews/Todos_os_Leads_Qualifica_o_de_Consultor.listView-meta.xml
<ListView>
    <fullName>Todos_os_Leads_Qualifica_o_de_Consultor</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.QualificacaodeConsultores</value>
    </filters>
    <label>Todos os Leads Qualificação de Consultor</label>
</ListView>